# color_detection

./: CMakeLists.txt  README.md  detect_num.h  main.cpp
